--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,6 +1,6 @@
 ---
-title: Treehouse
-subtitle: Website Design
+title: VEX Robotics - Recbots
+subtitle: 2017
 layout: default
 modal-id: 1
 date: 2014-07-15
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: In summer 2017, JCCC built Recbots out of VEX robotics kits. The robots had a variety of sensors and could autonmously perform programmed tasks. They could also be used with a remote control joystick. Code was written in RobotC. Some useful programs are linked below.
 
 ---
