--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -4,8 +4,8 @@ subtitle: 2017
 layout: default
 modal-id: 1
 date: 2014-07-15
-img: dreams.png
-thumbnail: dreams-thumbnail.png
+img: recbot.jpg
+thumbnail: recbot-thumbnail.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
